--- a/ico_irl/package.json
+++ b/ico_irl/package.json
@@ -6,7 +6,9 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@openzeppelin/contracts": "^2.5.1"
+  },
   "devDependencies": {
     "openzeppelin-solidity": "^3.2.0",
     "@openzeppelin/cli": "^2.8.2",
