--- a/ico_irl/package.json
+++ b/ico_irl/package.json
@@ -7,5 +7,30 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "openzeppelin-solidity": "^3.4.1",
+    "chai": "^4.2.0",
+    "eslint": "^6.5.1",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-mocha-no-only": "^1.1.0",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eth-sig-util": "^3.0.0",
+    "ethereumjs-util": "^7.0.7",
+    "ethereumjs-wallet": "^1.0.1",
+    "hardhat": "^2.0.6",
+    "hardhat-gas-reporter": "^1.0.4",
+    "lodash.startcase": "^4.4.0",
+    "lodash.zip": "^4.2.0",
+    "micromatch": "^4.0.2",
+    "mocha": "^8.0.1",
+    "rimraf": "^3.0.2",
+    "solhint": "^3.2.0",
+    "solidity-coverage": "^0.7.11",
+    "solidity-docgen": "^0.5.3",
+    "web3": "^1.3.0"
+  }
 }
