--- a/ico_irl/package.json
+++ b/ico_irl/package.json
@@ -34,6 +34,8 @@
     "web3": "^1.3.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^2.5.0"
+    "@openzeppelin/contracts": "^2.5.0",
+    "chai-bignumber": "^3.0.0",
+    "web3-utils": "^1.3.4"
   }
 }
