--- a/ico_irl/package.json
+++ b/ico_irl/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^2.5.0",
     "chai-bignumber": "^3.0.0",
+    "install": "^0.13.0",
     "web3-utils": "^1.3.4"
   }
 }
