--- a/ico_irl/package.json
+++ b/ico_irl/package.json
@@ -10,7 +10,13 @@
   "license": "ISC",
   "devDependencies": {
     "openzeppelin-solidity": "^3.4.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "",
+    "babel-preset-stage-2": "^6.18.0",
+    "babel-preset-stage-3": "^6.17.0",
+    "babel-register": "",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.0.0",
     "eslint": "^6.5.1",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.0",
